Добавляет стилизацию блока жирности на странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -127,20 +127,20 @@
 							<legend>Жирность:</legend>
 							<ul class="richness-list">
 								<li>
-									<label for="richness-0">0%</label>
-									<input class="visual-hidden" id="richness-0" type="radio" name="0">		
+									<input class="visual-hidden richness-list-input" id="richness-0" type="radio" name="0">	
+									<label for="richness-0">0%</label>	
 								</li>
 								<li>
-									<label for="richness-10">до 10%</label>
-									<input class="visual-hidden" id="richness-10" type="radio" name="10">		
+									<input class="visual-hidden richness-list-input" id="richness-10" type="radio" name="10" checked>
+									<label for="richness-10">до 10%</label>	
 								</li>
 								<li>
-									<label for="richness-30">до 30%</label>
-									<input class="visual-hidden" id="richness-30" type="radio" name="30">		
+									<input class="visual-hidden richness-list-input" id="richness-30" type="radio" name="30">
+									<label for="richness-30">до 30%</label>		
 								</li>
 								<li>
+									<input class="visual-hidden richness-list-input" id="richness-30-above" type="radio" name="30-above">
 									<label for="richness-30-above">выше 30%</label>
-									<input class="visual-hidden" id="richness-30-above" type="radio" name="30-above">
 								</li>
 							</ul>	
 						</fieldset>
