Добавляет стилизацию блока наполнителей на странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -148,24 +148,24 @@
 								<legend>Наполнители:</legend>
 								<ul class="fillers-list">
 									<li>
+										<input class="visual-hidden fillers-list-input" id="fillers-choco" type="checkbox" name="choco">
 										<label for="fillers-choco">шоколадные</label>
-										<input class="visual-hidden" id="fillers-choco" type="checkbox" name="choco">
 									</li>
 									<li>
+										<input class="visual-hidden fillers-list-input" id="fillers-sugar" type="checkbox" name="sugar">
 										<label for="fillers-sugar">сахарные присыпки</label>
-										<input class="visual-hidden" id="fillers-sugar" type="checkbox" name="sugar">
 									</li>
 									<li>
+										<input class="visual-hidden fillers-list-input" id="fillers-fruit" type="checkbox" name="fruit">
 										<label for="fillers-fruit">фрукты</label>
-										<input class="visual-hidden" id="fillers-fruit" type="checkbox" name="fruit">
 									</li>
 									<li>
+										<input class="visual-hidden fillers-list-input" id="fillers-syrups" type="checkbox" name="syrups">
 										<label for="fillers-syrups">сиропы</label>
-										<input class="visual-hidden" id="fillers-syrups" type="checkbox" name="syrups">
 									</li>
 									<li>
+										<input class="visual-hidden fillers-list-input" id="fillers-jam" type="checkbox" name="jam">
 										<label for="fillers-jam">джемы</label>
-										<input class="visual-hidden" id="fillers-jam" type="checkbox" name="jam">
 									</li>
 								</ul>
 							</fieldset>
