--- a/catalog.html
+++ b/catalog.html
@@ -289,17 +289,17 @@
 						<!-------------------------------- конец 3 ряда -------------------------------->
 					</ul>
 					<ul class="pagination-list">
-						<li class="pagination-item pagination-item-off"><a><</a></li>
+						<li class="pagination-item pagination-arrow-back pagination-arrow-off"><a></a></li>
 						<li class="pagination-item pagination-item-current"><a>1</a></li>
 						<li class="pagination-item"><a href="#">2</a></li>
 						<li class="pagination-item"><a href="#">3</a></li>
 						<li class="pagination-item"><a href="#">4</a></li>
 						<li class="pagination-item"><a href="#">5</a></li>
-						<li class="pagination-item"><a href="#">></a></li>
+						<li class="pagination-item pagination-arrow-next"><a href="#"></a></li>
 					</ul>
 				</section>
 			</main>
-			<footer class="main-footer container">
+			<footer class="main-footer main-footer-dash container">
 				<div class="footer-social">
 					<ul>
 						<li><a class="button-social button-social-tw" href="#"><span class="visual-hidden">Твиттер</span>
