Добавляет возможность переключать фоновое изображение на главную страницу

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
 			<header class="main-header container">
 				<nav class="main-navigation">
 					<div class="navigation-container">
-						<a href="index.html"><img class="main-logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси"></a>
+						<a class="navigation-logo" href="index.html"><img class="main-logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси"></a>
 						<ul class="site-navigation">
 							<li class="site-navigation-item">
 								<a class="site-navigation-catalog site-navigation-current" href="#">Каталог</a>
@@ -148,11 +148,11 @@
 								<legend>Наполнители:</legend>
 								<ul class="fillers-list">
 									<li>
-										<input class="visual-hidden fillers-list-input" id="fillers-choco" type="checkbox" name="choco">
+										<input class="visual-hidden fillers-list-input" id="fillers-choco" type="checkbox" name="choco" checked>
 										<label for="fillers-choco">шоколадные</label>
 									</li>
 									<li>
-										<input class="visual-hidden fillers-list-input" id="fillers-sugar" type="checkbox" name="sugar">
+										<input class="visual-hidden fillers-list-input" id="fillers-sugar" type="checkbox" name="sugar" checked>
 										<label for="fillers-sugar">сахарные присыпки</label>
 									</li>
 									<li>
