--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
+		<input class="visual-hidden" id="product-1" type="radio" name="toggle-raspberry" checked>
+		<input class="visual-hidden" id="product-2" type="radio" name="toggle-lemon">
+		<input class="visual-hidden" id="product-3" type="radio" name="toggle-strawberry">
 		<div class="site-wrapper site-wrapper-index">
 			<header class="main-header container">
 				<nav class="main-navigation">
@@ -75,15 +78,12 @@
 					<section class="slider">
 						<ul class="slider-toggle-list">
 							<li>
-								<input class="visual-hidden" id="product-1" type="radio" name="toggle-raspberry" checked>
 								<label class=" slider-toggle-item" for="product-1">Первый слайд</label>
 							</li>
 							<li>
-								<input class="visual-hidden" id="product-2" type="radio" name="toggle-lemon">
 								<label class="  slider-toggle-item" for="product-2">Второй слайд</label>
 							</li>
 							<li>
-								<input class="visual-hidden" id="product-3" type="radio" name="toggle-strawberry">
 								<label class="  slider-toggle-item" for="product-3">Третий слайд</label>		
 							</li>
 						</ul>
@@ -128,7 +128,7 @@
 									<span>/кг</span>
 								</div>
 								<img src="img/icecream-orange.jpg" width="267" height="267" alt="Фото сливочного мороженого с апельсиновым джемом и цитрусовой стружкой">
-								<a class="button" href="#">Быстрый просмотр</a>
+								<a class="button hits-item-button" href="#">Быстрый просмотр</a>
 							</li>
 							<li class="hits-item">
 								<h3>Сливочно-кофейное с кусочками шоколада</h3>
