Добавляет подменю каталога на все страницы сайта

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 					<div class="navigation-container">
 						<img class="main-logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси">
 						<ul class="site-navigation">
-							<li class="site-navigation-item">
+							<li class="site-navigation-item site-navigation-item-catalog">
 								<a class="site-navigation-catalog" href="#">Каталог</a>
-								<ul class="visual-hidden site-navigation-sub">
-									<li><a href="#"><b>Новинки</b></a></li>
+								<ul class="site-navigation-sub">
+									<li><a class="catalog-sub-news" href="#"><b>Новинки</b></a></li>
 									<li><a href="catalog.html">Сливочное</a></li>
 									<li><a href="#">Щербеты</a></li>
 									<li><a href="#">Фруктовый лед</a></li>
