Добавляет окно обратной связи на все страницы сайта

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<div class="navigation-container user-menu">
 						<div class="menu-search">
 							<div class="sub-menu menu-search-sub">
-								<form class="visual-hidden from form-search" action="https://echo.htmlacademy.ru" method="post">
+								<form class="form form-search" action="https://echo.htmlacademy.ru" method="post">
 									<label class="visual-hidden" for="main-search">Введите информацию для поиска</label>
 									<input id="main-search" type="search" name="search" placeholder="Что ищем?">
 									<button class="button button-search">Поиск</button>	
@@ -43,7 +43,7 @@
 						</div>
 						<div class="menu-login">
 							<a class="menu-item menu-item-login" href="#">Вход</a>
-							<div class="visual-hidden sub-menu menu-login-sub">
+							<div class="sub-menu menu-login-sub">
 								<form class="form form-login" action="https://echo.htmlacademy.ru" method="post">
 									<p>
 										<label class="visual-hidden" for="login-email">Введите электронную почту</label>
@@ -212,7 +212,7 @@
 								<b>8 812 450-25-25</b><br>
 								(с 10 до 20 ежедневно)
 							</p>
-							<a class="button" href="#">Форма обратной связи</a>
+							<a class="button feedback-button" href="#">Форма обратной связи</a>
 						</div>
 					</div>
 				</section>
