--- a/catalog.html
+++ b/catalog.html
@@ -14,10 +14,11 @@
 					<div class="navigation-container">
 						<a class="navigation-logo" href="index.html"><img class="main-logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси"></a>
 						<ul class="site-navigation">
-							<li class="site-navigation-item">
+							<li class="site-navigation-item 
+							site-navigation-item-catalog">
 								<a class="site-navigation-catalog site-navigation-current" href="#">Каталог</a>
-								<ul class="visual-hidden site-navigation-sub">
-									<li><a href="#"><b>Новинки</b></a></li>
+								<ul class="site-navigation-sub">
+									<li><a class="catalog-sub-news" href="#"><b>Новинки</b></a></li>
 									<li><a href="catalog.html">Сливочное</a></li>
 									<li><a href="#">Щербеты</a></li>
 									<li><a href="#">Фруктовый лед</a></li>
@@ -31,7 +32,7 @@
 					<div class="navigation-container user-menu">
 						<div class="menu-search">
 							<div class="sub-menu menu-search-sub">
-								<form class="visual-hidden from form-search" action="https://echo.htmlacademy.ru" method="post">
+								<form class="form form-search" action="https://echo.htmlacademy.ru" method="post">
 									<label class="visual-hidden" for="main-search">Введите информацию для поиска</label>
 									<input id="main-search" type="search" name="search" placeholder="Что ищем?">
 									<button class="button button-search">Поиск</button>	
@@ -40,7 +41,7 @@
 						</div>
 						<div class="menu-login">
 							<a class="menu-item menu-item-login" href="#">Вход</a>
-							<div class="visual-hidden sub-menu menu-login-sub">
+							<div class="sub-menu menu-login-sub">
 								<form class="form form-login" action="https://echo.htmlacademy.ru" method="post">
 									<p>
 										<label class="visual-hidden" for="login-email">Введите электронную почту</label>
