Добавляет окна корзины на страницу каталога

--- a/catalog.html
+++ b/catalog.html
@@ -63,7 +63,7 @@
 							<a class="menu-item menu-item-cart menu-item-cart-full" href="#">2 товара</a>
 							<div class="sub-menu menu-cart-sub">
 								<table class="cart-table">
-									<tr class="cart-table-item">
+									<tr class="cart-table-item cart-table-item-orange">
 										<td class="cart-table-item-del"><button class="modal-close">Убрать из корзины</button></td>
 										<td class="cart-table-item-image"></td>
 										<td class="cart-table-item-text"><a href="#">Пломбир с апельсиновым джемом</a></td>
@@ -71,7 +71,8 @@
 										<td class="cart-table-item-unit"><span>200</span> руб.</td>
 										<td class="cart-table-item-price">300 руб.</td>
 									</tr>
-									<tr class="cart-table-item">
+									<tr class="cart-table-item
+									cart-table-item-white">
 										<td class="cart-table-item-del"><button class="modal-close">Убрать из корзины</button></td>
 										<td class="cart-table-item-image"></td>
 										<td class="cart-table-item-text"><a href="#">Клубничный пломбир с присыпкой из белого шоколада</a></td>
@@ -80,7 +81,7 @@
 										<td class="cart-table-item-price">450 руб.</td>
 									</tr>
 								</table>
-								<b class="cart-totals">Итого: <span>750</span> Руб.</b>
+								<b class="cart-totals">Итого: <span>750</span> руб.</b>
 								<a class="button">Оформить заказ</a>
 							</div>
 						</div>
