Добавляет отсутствующие изображения

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 										<label class="visual-hidden" for="subscribe-email">Введите электронную почту</label>
 										<input id="subscribe-email" type="email" name="email" placeholder="Электронная почта">
 									</p>
-								<button class="button" type="submit">Отправить</button>
+								<button class="button subscribe-button" type="submit">Отправить</button>
 								</form>
 							</div>
 						</section>
@@ -265,5 +265,8 @@
 				<button class="modal-close" type="button">Закрыть</button>
 			</section>
 		</div>
+
+		
+
 	</body>
 </html>
