Добавляет JavaScript и решает проблему с радио-кнопками на всех страницах сайта

--- a/catalog.html
+++ b/catalog.html
@@ -129,19 +129,19 @@
 							<legend>Жирность:</legend>
 							<ul class="richness-list">
 								<li>
-									<input class="visual-hidden richness-list-input" id="richness-0" type="radio" name="0">	
+									<input class="visual-hidden richness-list-input" id="richness-0" type="radio" name="richness">	
 									<label for="richness-0">0%</label>	
 								</li>
 								<li>
-									<input class="visual-hidden richness-list-input" id="richness-10" type="radio" name="10" checked>
+									<input class="visual-hidden richness-list-input" id="richness-10" type="radio" name="richness" checked>
 									<label for="richness-10">до 10%</label>	
 								</li>
 								<li>
-									<input class="visual-hidden richness-list-input" id="richness-30" type="radio" name="30">
+									<input class="visual-hidden richness-list-input" id="richness-30" type="radio" name="richness">
 									<label for="richness-30">до 30%</label>		
 								</li>
 								<li>
-									<input class="visual-hidden richness-list-input" id="richness-30-above" type="radio" name="30-above">
+									<input class="visual-hidden richness-list-input" id="richness-30-above" type="radio" name="richness">
 									<label for="richness-30-above">выше 30%</label>
 								</li>
 							</ul>	
