Исправление багов IE11

--- a/catalog.html
+++ b/catalog.html
@@ -93,7 +93,7 @@
 				</p>
 			</header>
 			<main class="container main-container">
-				<div class="title-container">
+				<div class="title-container container">
 					<h1 class="page-title">Сливочное мороженое</h1>
 					<ul class="bredcrumbs">
 						<li><a href="index.html">Главная</a></li>
@@ -101,7 +101,7 @@
 						<li class="bredcrumbs-current">Сливочное</li>
 					</ul>
 				</div>
-				<section class="filters">
+				<section class="filters container">
 					<h2 class="visual-hidden">Фильтр товаров</h2>
 					<form class="from form-filters" action="https://echo.htmlacademy.ru" method="post">
 						<fieldset class="filters-item filters-item-sort">
@@ -175,7 +175,7 @@
 						<button class="button button-filters" type="submit">Применить</button>
 					</form>
 				</section>
-				<section class="catalog">
+				<section class="catalog container">
 					<h2 class="visual-hidden">Список сливочного мороженого</h2>
 					<ul class="catalog-list">
 						<li class="hits-item">
