Исправляет контейнер и кнопки удаления товара из корзины на странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -64,7 +64,7 @@
 							<div class="sub-menu menu-cart-sub">
 								<table class="cart-table">
 									<tr class="cart-table-item cart-table-item-orange">
-										<td class="cart-table-item-del"><button class="modal-close">Убрать из корзины</button></td>
+										<td class="cart-table-item-del"><button class="table-close">Убрать из корзины</button></td>
 										<td class="cart-table-item-image"></td>
 										<td class="cart-table-item-text"><a href="#">Пломбир с апельсиновым джемом</a></td>
 										<td class="cart-table-item-weight"><span>1,5</span> кг x</td>
@@ -73,7 +73,7 @@
 									</tr>
 									<tr class="cart-table-item
 									cart-table-item-white">
-										<td class="cart-table-item-del"><button class="modal-close">Убрать из корзины</button></td>
+										<td class="cart-table-item-del"><button class="table-close">Убрать из корзины</button></td>
 										<td class="cart-table-item-image"></td>
 										<td class="cart-table-item-text"><a href="#">Клубничный пломбир с присыпкой из белого шоколада</a></td>
 										<td class="cart-table-item-weight"><span>1,5</span> кг x</td>
@@ -93,7 +93,7 @@
 				</p>
 			</header>
 			<main class="container main-container">
-				<div class="title-container container">
+				<div class="title-container">
 					<h1 class="page-title">Сливочное мороженое</h1>
 					<ul class="bredcrumbs">
 						<li><a href="index.html">Главная</a></li>
@@ -101,7 +101,7 @@
 						<li class="bredcrumbs-current">Сливочное</li>
 					</ul>
 				</div>
-				<section class="filters container">
+				<section class="filters">
 					<h2 class="visual-hidden">Фильтр товаров</h2>
 					<form class="from form-filters" action="https://echo.htmlacademy.ru" method="post">
 						<fieldset class="filters-item filters-item-sort">
@@ -175,7 +175,7 @@
 						<button class="button button-filters" type="submit">Применить</button>
 					</form>
 				</section>
-				<section class="catalog container">
+				<section class="catalog">
 					<h2 class="visual-hidden">Список сливочного мороженого</h2>
 					<ul class="catalog-list">
 						<li class="hits-item">
