Добавлено корректное отображение картинок мороженого в корзине товаров

--- a/catalog.html
+++ b/catalog.html
@@ -65,7 +65,9 @@
 								<table class="cart-table">
 									<tr class="cart-table-item cart-table-item-orange">
 										<td class="cart-table-item-del"><button class="table-close">Убрать из корзины</button></td>
-										<td class="cart-table-item-image"></td>
+										<td class="cart-table-item-image">
+											<img src="img/icecream-orange.jpg" width="33" height="33" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+										</td>
 										<td class="cart-table-item-text"><a href="#">Пломбир с апельсиновым джемом</a></td>
 										<td class="cart-table-item-weight"><span>1,5</span> кг x</td>
 										<td class="cart-table-item-unit"><span>200</span> руб.</td>
@@ -74,7 +76,9 @@
 									<tr class="cart-table-item
 									cart-table-item-white">
 										<td class="cart-table-item-del"><button class="table-close">Убрать из корзины</button></td>
-										<td class="cart-table-item-image"></td>
+										<td class="cart-table-item-image">
+											<img src="img/icecream-white.jpg" width="33" height="33" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+										</td>
 										<td class="cart-table-item-text"><a href="#">Клубничный пломбир с присыпкой из белого шоколада</a></td>
 										<td class="cart-table-item-weight"><span>1,5</span> кг x</td>
 										<td class="cart-table-item-unit"><span>300</span> руб.</td>
