--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
 					<div class="navigation-container">
 						<a class="navigation-logo" href="index.html"><img class="main-logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси"></a>
 						<ul class="site-navigation">
-							<li class="site-navigation-item 
+							<li class="site-navigation-item
 							site-navigation-item-catalog">
 								<a class="site-navigation-catalog site-navigation-current" href="#">Каталог</a>
 								<ul class="site-navigation-sub">
@@ -35,7 +35,7 @@
 								<form class="form form-search" action="https://echo.htmlacademy.ru" method="post">
 									<label class="visual-hidden" for="main-search">Введите информацию для поиска</label>
 									<input id="main-search" type="search" name="search" placeholder="Что ищем?">
-									<button class="button button-search">Поиск</button>	
+									<button class="button button-search">Поиск</button>
 								</form>
 							</div>
 						</div>
@@ -128,27 +128,27 @@
 								<div class="filters-item-price-toggle filters-item-price-toggle-max"></div>
 							</div>
 						</fieldset>
-						
+
 						<fieldset class="filters-item filters-item-richness">
 							<legend>Жирность:</legend>
 							<ul class="richness-list">
 								<li>
-									<input class="visual-hidden richness-list-input" id="richness-0" type="radio" name="richness">	
-									<label for="richness-0">0%</label>	
+									<input class="visual-hidden richness-list-input" id="richness-0" type="radio" name="richness">
+									<label for="richness-0">0%</label>
 								</li>
 								<li>
 									<input class="visual-hidden richness-list-input" id="richness-10" type="radio" name="richness" checked>
-									<label for="richness-10">до 10%</label>	
+									<label for="richness-10">до 10%</label>
 								</li>
 								<li>
 									<input class="visual-hidden richness-list-input" id="richness-30" type="radio" name="richness">
-									<label for="richness-30">до 30%</label>		
+									<label for="richness-30">до 30%</label>
 								</li>
 								<li>
 									<input class="visual-hidden richness-list-input" id="richness-30-above" type="radio" name="richness">
 									<label for="richness-30-above">выше 30%</label>
 								</li>
-							</ul>	
+							</ul>
 						</fieldset>
 							<fieldset class="filters-item filters-item-fillers">
 								<legend>Наполнители:</legend>
@@ -175,7 +175,7 @@
 									</li>
 								</ul>
 							</fieldset>
-						
+
 						<button class="button button-filters" type="submit">Применить</button>
 					</form>
 				</section>
@@ -183,7 +183,7 @@
 					<h2 class="visual-hidden">Список сливочного мороженого</h2>
 					<ul class="catalog-list">
 						<li class="hits-item">
-							<h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+							<a class="hits-item-title" href="#"><h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3></a>
 							<div class="hits-item-price">
 								<b>310₽</b>
 								<span>/кг</span>
@@ -192,7 +192,7 @@
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
-							<h3>Сливочно-кофейное с кусочками шоколада</h3>
+							<a class="hits-item-title" href="#"><h3>Сливочно-кофейное с кусочками шоколада</h3></a>
 							<div class="hits-item-price">
 								<b>380₽</b>
 								<span>/кг</span>
@@ -201,7 +201,7 @@
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
-							<h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+							<a class="hits-item-title" href="#"><h3>Сливочно-клубничное с присыпкой из белого шоколада</h3></a>
 							<div class="hits-item-price">
 								<b>355₽</b>
 								<span>/кг</span>
@@ -210,7 +210,7 @@
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
-							<h3>Сливочное крем-брюле с карамельной подливкой</h3>
+							<a class="hits-item-title" href="#"><h3>Сливочное крем-брюле с карамельной подливкой</h3></a>
 							<div class="hits-item-price">
 								<b>415₽</b>
 								<span>/кг</span>
@@ -220,7 +220,7 @@
 						</li>
 						<!-------------------------------- конец 1 ряда -------------------------------->
 						<li class="hits-item">
-							<h3>Сливочное с брусничным джемом</h3>
+							<a class="hits-item-title" href="#"><h3>Сливочное с брусничным джемом</h3></a>
 							<div class="hits-item-price">
 								<b>325₽</b>
 								<span>/кг</span>
@@ -229,7 +229,7 @@
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
-							<h3>Сливочно-черничное с цельными ягодами черники</h3>
+							<a class="hits-item-title" href="#"><h3>Сливочно-черничное с цельными ягодами черники</h3></a>
 							<div class="hits-item-price">
 								<b>410₽</b>
 								<span>/кг</span>
@@ -238,7 +238,7 @@
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
-							<h3>Сливочно-лимонное с карамельной присыпкой</h3>
+							<a class="hits-item-title" href="#"><h3>Сливочно-лимонное с карамельной присыпкой</h3></a>
 							<div class="hits-item-price">
 								<b>375₽</b>
 								<span>/кг</span>
@@ -247,7 +247,7 @@
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
-							<h3>Сливочное с шоколадной стружкой</h3>
+							<a class="hits-item-title" href="#"><h3>Сливочное с шоколадной стружкой</h3></a>
 							<div class="hits-item-price">
 								<b>320₽</b>
 								<span>/кг</span>
@@ -257,7 +257,7 @@
 						</li>
 						<!-------------------------------- конец 2 ряда -------------------------------->
 						<li class="hits-item">
-							<h3>Сливочно-ванильное с кусочками шоколада</h3>
+							<a class="hits-item-title" href="#"><h3>Сливочно-ванильное с кусочками шоколада</h3></a>
 							<div class="hits-item-price">
 								<b>440₽</b>
 								<span>/кг</span>
@@ -266,7 +266,7 @@
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
-							<h3>Сливочного с ментоловым сиропом</h3>
+							<a class="hits-item-title" href="#"><h3>Сливочного с ментоловым сиропом</h3></a>
 							<div class="hits-item-price">
 								<b>435₽</b>
 								<span>/кг</span>
@@ -275,7 +275,7 @@
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
-							<h3>Сливочное с кусочками черного шоколада</h3>
+							<a class="hits-item-title" href="#"><h3>Сливочное с кусочками черного шоколада</h3></a>
 							<div class="hits-item-price">
 								<b>355₽</b>
 								<span>/кг</span>
@@ -284,7 +284,7 @@
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
-							<h3>Сливочное с мятным сиропом</h3>
+							<a class="hits-item-title" href="#"><h3>Сливочное с мятным сиропом</h3></a>
 							<div class="hits-item-price">
 								<b>420₽</b>
 								<span>/кг</span>
@@ -320,7 +320,7 @@
 						<li><a class="button-social button-social-vk" href="#"><span class="visual-hidden">Вконтакте</span>
 							<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><g fill="#e6ebe9"><path d="M16.637 14.495c.402-.019.719-.082.951-.188.326-.145.54-.33.641-.559.101-.229.15-.496.15-.797 0-.232-.058-.465-.174-.697-.116-.232-.322-.405-.617-.517-.264-.1-.592-.155-.984-.165a76.242 76.242 0 0 0-1.652-.014h-.339v2.965h.565c.571 0 1.057-.009 1.459-.028zM18.118 17.084c-.282-.081-.672-.125-1.166-.132a127.97 127.97 0 0 0-1.55-.009h-.79v3.493h.264c1.014 0 1.74-.003 2.18-.009a3.2 3.2 0 0 0 1.212-.245c.377-.157.633-.364.774-.625s.214-.562.214-.9c0-.446-.088-.788-.261-1.03-.17-.241-.464-.423-.877-.543z"/><path d="M16 0C7.164 0 0 7.164 0 16c0 8.837 7.164 16 16 16 8.837 0 16-7.163 16-16 0-8.836-7.163-16-16-16zm6.602 20.531a3.73 3.73 0 0 1-1.124 1.327c-.552.415-1.161.71-1.823.886s-1.501.264-2.519.264h-6.121V8.987h5.443c1.13 0 1.957.038 2.48.113a5.126 5.126 0 0 1 1.561.5c.533.27.929.632 1.189 1.087.26.455.392.975.392 1.558 0 .678-.179 1.278-.536 1.795-.358.518-.863.92-1.517 1.208v.075c.917.182 1.642.559 2.179 1.13.537.571.807 1.325.807 2.261 0 .678-.138 1.283-.411 1.817z"/></g></svg>
 						</a></li>
-					</ul> 
+					</ul>
 				</div>
 				<ul class="footer-link-list">
 					<li class="footer-link-heart"><a class="footer-link-item" href="#"><b>Для поставщиков</b></a></li>
