--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						<h2 class="visual-hidden">Хиты продаж</h2>
 						<ul class="hits-list">
 							<li class="hits-item">
-								<h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+								<a class="hits-item-title" href="#"><h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3></a>
 								<div class="hits-item-price">
 									<b>310₽</b>
 									<span>/кг</span>
@@ -133,7 +133,7 @@
 								<a class="button hits-item-button" href="#">Быстрый просмотр</a>
 							</li>
 							<li class="hits-item">
-								<h3>Сливочно-кофейное с кусочками шоколада</h3>
+								<a class="hits-item-title" href="#"><h3>Сливочно-кофейное с кусочками шоколада</h3></a>
 								<div class="hits-item-price">
 									<b>380₽</b>
 									<span>/кг</span>
@@ -142,7 +142,7 @@
 								<a class="button" href="#">Быстрый просмотр</a>
 							</li>
 							<li class="hits-item">
-								<h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+								<a class="hits-item-title" href="#"><h3>Сливочно-клубничное с присыпкой из белого шоколада</h3></a>
 								<div class="hits-item-price">
 									<b>355₽</b>
 									<span>/кг</span>
@@ -151,7 +151,7 @@
 								<a class="button" href="#">Быстрый просмотр</a>
 							</li>
 							<li class="hits-item">
-								<h3>Сливочное крем-брюле с карамельной подливкой</h3>
+								<a class="hits-item-title" href="#"><h3>Сливочное крем-брюле с карамельной подливкой</h3></a>
 								<div class="hits-item-price">
 									<b>415₽</b>
 									<span>/кг</span>
