--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 								<b>8 812 450-25-25</b><br>
 								(с 10 до 20 ежедневно)
 							</p>
-							<a class="button feedback-button" href="#">Форма обратной связи</a>
+							<a class="button feedback-button" href="form.html">Форма обратной связи</a>
 						</div>
 					</div>
 				</section>
