Выполнение критерия Д26. У интерактивных элементов при нажатии или фокусе с клавиатуры есть активное состояние.

--- a/catalog.html
+++ b/catalog.html
@@ -30,7 +30,7 @@
 						</ul>
 					</div>
 					<div class="navigation-container user-menu">
-						<div class="menu-search">
+						<div class="menu-search" tabindex="0">
 							<div class="sub-menu menu-search-sub">
 								<form class="form form-search" action="https://echo.htmlacademy.ru" method="post">
 									<label class="visual-hidden" for="main-search">Введите информацию для поиска</label>
@@ -124,8 +124,8 @@
 								<div class="scale">
 									<div class="bar"></div>
 								</div>
-								<div class="filters-item-price-toggle filters-item-price-toggle-min"></div>
-								<div class="filters-item-price-toggle filters-item-price-toggle-max"></div>
+								<div class="filters-item-price-toggle filters-item-price-toggle-min" tabindex="0"></div>
+								<div class="filters-item-price-toggle filters-item-price-toggle-max" tabindex="0"></div>
 							</div>
 						</fieldset>
 
