Выполнение критерия Д19. Вёрстка проходит тест на переполнение контентом.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="site-wrapper site-wrapper-index">
 			<header class="main-header container">
 				<nav class="main-navigation">
-					<div class="navigation-container">
+					<div class="navigation-container site-menu">
 						<img class="main-logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси">
 						<ul class="site-navigation">
 							<li class="site-navigation-item site-navigation-item-catalog">
@@ -34,7 +34,7 @@
 						</ul>
 					</div>
 					<div class="navigation-container user-menu">
-						<div class="menu-search">
+						<div class="menu-search" tabindex="0">
 							<div class="sub-menu menu-search-sub">
 								<form class="form form-search" action="https://echo.htmlacademy.ru" method="post">
 									<label class="visual-hidden" for="main-search">Введите информацию для поиска</label>
@@ -239,8 +239,8 @@
 				</div>
 				<ul class="footer-link-list">
 					<li class="footer-link-heart"><a class="footer-link-item" href="#"><b>Для поставщиков</b></a></li>
-					<li><a class="footer-link-item" href="#">О производстве</a></li>
 					<li><a class="footer-link-item" href="#">Наши документы</a></li>
+					<li><a class="footer-link-item" href="#">О производстве</a></li>
 					<li><a class="footer-link-item" href="#">Экологические стандарты</a></li>
 				</ul>
 				<div class="footer-copyright">
