--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
 		<div class="site-wrapper">
 			<header class="main-header container">
 				<nav class="main-navigation">
-					<div class="navigation-container">
+					<div class="navigation-container site-menu">
 						<a class="navigation-logo" href="index.html"><img class="main-logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси"></a>
 						<ul class="site-navigation">
 							<li class="site-navigation-item
