--- a/index.html
+++ b/index.html
@@ -268,6 +268,6 @@
 				<button class="modal-close" type="button">Закрыть</button>
 			</section>
 		</div>
-		<script src="js/script.js"></script>
+		<script src="js/script.min.js"></script>
 	</body>
 </html>
