--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
 		<title>HTML Academy: Глейси</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
 		<link href="css/normalize.css" rel="stylesheet">
-		<link href="css/style.css" rel="stylesheet">
+		<link href="css/style.min.css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="site-wrapper">
@@ -329,7 +329,7 @@
 					<li><a class="footer-link-item" href="#">Экологические стандарты</a></li>
 				</ul>
 				<div class="footer-copyright">
-					<a class="footer-copyright-button" href="https://htmlacademy.ru/intensive/htmlcss"></a>
+					<a class="footer-copyright-button" href="https://htmlacademy.ru/intensive/htmlcss" area-label="HTML Academy"></a>
 					<p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
 				</div>
 			</footer>
