Выполнение критерия Д27. Все интерактивные элементы имеют текстовое описание.

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 					<li><a class="footer-link-item" href="#">Экологические стандарты</a></li>
 				</ul>
 				<div class="footer-copyright">
-					<a class="footer-copyright-button" href="https://htmlacademy.ru/intensive/htmlcss" area-label="HTML Academy"></a>
+					<a class="footer-copyright-button" href="https://htmlacademy.ru/intensive/htmlcss"><span class="visual-hidden">HTML Academy</span></a>
 					<p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
 				</div>
 			</footer>
